[package]
version = "0.1.0"
build = "build.rs"
name = "mbedtls-sys"
readme = "README.md"
license = "Apache-2.0"
description = "Rust bindings to mbedtls."
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
repository = "https://github.com/rust-mbedtls/mbedtls-sys"

[build-dependencies]
bindgen = "0.51.0"
