[package]
edition = "2018"
version = "0.1.0"
build = "build/build.rs"
name = "mbedtls-sys"
readme = "README.md"
license = "Apache-2.0"
description = "Rust bindings to mbedtls."
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
repository = "https://github.com/rust-mbedtls/mbedtls-sys"

[dependencies]
mbedtls-src = { git = "https://github.com/lkatalin/mbedtls-src", branch = "generate_config", rev = "47bb068e99dfd6a15814f448eed0336b30b91f82", optional = true } 
#mbedtls-src = { path = "../mbedtls-src/", optional = true }

[build-dependencies]
bindgen = "0.51.0"
mbedtls-src = { git = "https://github.com/lkatalin/mbedtls-src", branch = "generate_config", rev = "47bb068e99dfd6a15814f448eed0336b30b91f82", optional = true } 
#mbedtls-src = { path = "../mbedtls-src/", optional = true }

[features]
vendored = ['mbedtls-src']
